--- a/app/src/main/res/layout/character_detail_information.xml
+++ b/app/src/main/res/layout/character_detail_information.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/closeIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +13,9 @@
         android:layout_marginTop="30dp"
         android:src="@drawable/close_icon"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/white"
+        android:clickable="true"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/nameTextView"
@@ -23,7 +25,7 @@
         android:textColor="@color/blue"
         android:layout_marginTop="20dp"
         android:textSize="24sp"
-        android:lineHeight="28dp"
+        android:lineHeight="28sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/closeIcon"
         app:layout_constraintTop_toBottomOf="@+id/closeIcon"
